added alternate version table with 7 columns, still rough

--- a/publish-spike-alt.html
+++ b/publish-spike-alt.html
@@ -42,7 +42,7 @@ thead tr td {
 	background-color: #D5D5D5;
 }
 h1 {
-	font-size: 18px;
+	font-size: 16px;
 	font-weight: 500;
 	color: #323333;
 }
@@ -88,16 +88,25 @@ td img {
 	padding-bottom: 3px;
 }
 .th-one {
-	width: 60%;
+	width: 210px;
 }
 .th-two {
-	width: 20%;
+	width: 100px;
 }
 .th-three {
-	width: 15%;
+	width: 90px;
 }
 .th-four {
-	width: 21%;
+	width: 121px;
+}
+.th-five {
+	width: 90px;
+}
+.th-six {
+	width: 90px;
+}
+.th-seven {
+	width: 78px;
 }
 .bubble {
 	margin-left: 115px; 
@@ -193,6 +202,9 @@ span {
 					<th class="th-two"><h1>Author</h1></th>
 					<th class="th-three"><h1>Targeting</h1></th>
 					<th class="th-four"><h1>Date</h1></th>
+					<th class="th-five"><h1>Impressions</h1></th>
+					<th class="th-six"><h1>Interactions</h1></th>
+					<th class="th-seven"><h1>Comments</h1></th>
 				</tr>
 			</thead>
 			<tbody>
@@ -201,42 +213,63 @@ span {
 					<td><span>chad.rutan@tommybahama.com</span></td>
 					<td><span>Scottsdale-I</span></td>
 					<td><span>Sun Sep 15 @ 10:00 AM</span></td>
+					<td><span>number</span></td>
+					<td><span>number</span></td>
+					<td><span>number</span></td>
 				</tr>
 				<tr>
 					<td><span><img src="file://localhost/Users/ianniemi/Desktop/Work/platform/public/images/ico-fb.png" alt="img"><a href="#">Time is running out... And, we have one Limited Edition NY Yankees Watch left at Garden State Plaza. Each piece is individually numbered making it the ultimate accessory for die-hard fans.: yankee_watch.png</a></span></td>
 					<td><span>jenna.smith@tommybahama.com</span></td>
 					<td><span>Garden State-R</span></td>
 					<td><span>Sun Sep 15 @ 02:00 PM</span></td>
+					<td><span>number</span></td>
+					<td><span>number</span></td>
+					<td><span>number</span></td>
 				</tr>
 				<tr>
 					<td><span><img src="file://localhost/Users/ianniemi/Desktop/Work/platform/public/images/ico-fb.png" alt="img"><a href="#">Item of the Week! Receive 50% off our entire assortment of Beach Towels after spending $50 in retail purchases! : BEACH_TOWELS.jpg</a></span></td>
 					<td><span>ryan.funasaki@tommybahama.com</span></td>
 					<td><span>Wailea-I</span></td>
 					<td><span>Mon Sep 16 @ 08:00 AM</span></td>
+					<td><span>number</span></td>
+					<td><span>number</span></td>
+					<td><span>number</span></td>
 				</tr>
 				<tr>
 					<td><span><img src="file://localhost/Users/ianniemi/Desktop/Work/platform/public/images/ico-fb.png" alt="img"><a href="#">Take Tommy to the beach with our plush beach towels! Now 50% off with any $50 purchase! Sale ends Sunday! #NaplesPier #TB #MLOLW #Beachtowels : Beach_Towels.JPG</a></span></td>
 					<td><span>allison.desmond@tommybahama.com</span></td>
 					<td><span>Naples-I</span></td>
 					<td><span>Mon Sep 16 @ 09:00 AM</span></td>
+					<td><span>number</span></td>
+					<td><span>number</span></td>
+					<td><span>number</span></td>
 				</tr>
 				<tr>
 					<td><span><img src="file://localhost/Users/ianniemi/Desktop/Work/platform/public/images/ico-fb.png" alt="img"><a href="#">Our luxurious Beach Blankets and oversized Beach Towels are a steal at 50% off with your $50 purchase in our retail store! This offer is going on now through 9/22 and while supplies last!: beachblanket.jpg</a></span></td>
 					<td><span>charity.garrido@tommybahama.com</span></td>
 					<td><span>Town Square-I</span></td>
 					<td><span>Mon Sep 16 @ 10:00 AM</span></td>
+					<td><span>number</span></td>
+					<td><span>number</span></td>
+					<td><span>number</span></td>
 				</tr>
 				<tr>
 					<td><span><img src="file://localhost/Users/ianniemi/Desktop/Work/platform/public/images/ico-fb.png" alt="img"><a href="#">Take a moment to RELAX and "like" this photo if you wish it was still the weekend! : iStock_000010210338Small_091613.jpg</a></span></td>
 					<td><span>alexandria.baker@tommybahama.com</span></td>
 					<td><span>Anywhere</span></td>
 					<td><span>Mon Sep 16 @ 03:30 PM</span></td>
+					<td><span>number</span></td>
+					<td><span>number</span></td>
+					<td><span>number</span></td>
 				</tr>
 				<tr>
 					<td><span><img src="file://localhost/Users/ianniemi/Desktop/Work/platform/public/images/ico-fb.png" alt="img"><a href="#">Our pants promotion is still happening! Spend $200- or more and receive 50% off additional pants for men and women!* Come to Garden State Plaza so we can help you pick out the perfect pair of pants! *-See sales team for details.: denim_promo.png</a></span></td>
 					<td><span>jenna.smith@tommybahama.com</span></td>
 					<td><span>Garden State-R</span></td>
 					<td><span>Tue Sep 17 @ 12:00 PM</span></td>
+					<td><span>number</span></td>
+					<td><span>number</span></td>
+					<td><span>number</span></td>
 				</tr>
 			</tbody>
 		</table>
